--- a/CHANGES
+++ b/CHANGES
@@ -561,6 +561,7 @@ Added curtime_mem in monitor_job() (Monitor)
 Created __verify_memory_limits(), called from monitor_job() (Monitor)
 Created isCGROUPSSite(), used by __getsetWNMem() and its duplicate getsetWNMem() (Monitor, pilot)
 New version of aria2c Site Mover from Vincenzo Lavorini, e.g. updating the auth cluster (to rucio-auth-prod.cern.ch)
+__getsetWNMem() now using getMaxMemoryUsageFromCGroups() for testing purposes (Monitor)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
