--- a/CHANGES
+++ b/CHANGES
@@ -562,6 +562,7 @@ Created __verify_memory_limits(), called from monitor_job() (Monitor)
 Created isCGROUPSSite(), used by __getsetWNMem() and its duplicate getsetWNMem() (Monitor, pilot)
 New version of aria2c Site Mover from Vincenzo Lavorini, e.g. updating the auth cluster (to rucio-auth-prod.cern.ch)
 __getsetWNMem() now using getMaxMemoryUsageFromCGroups() for testing purposes (Monitor)
+Corrected error message 'cmtside command was timed out' -> 'cmtsite command was timed out' in verifyCmtsiteCmd() (ATLASExperiment, TaiwanExperiment)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
