--- a/CHANGES
+++ b/CHANGES
@@ -563,6 +563,7 @@ Created isCGROUPSSite(), used by __getsetWNMem() and its duplicate getsetWNMem()
 New version of aria2c Site Mover from Vincenzo Lavorini, e.g. updating the auth cluster (to rucio-auth-prod.cern.ch)
 __getsetWNMem() now using getMaxMemoryUsageFromCGroups() for testing purposes (Monitor)
 Corrected error message 'cmtside command was timed out' -> 'cmtsite command was timed out' in verifyCmtsiteCmd() (ATLASExperiment, TaiwanExperiment)
+Now using ATLAS_CGROUPS_BASE in isCGROUPSSite() (processes)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
