--- a/CHANGES
+++ b/CHANGES
@@ -564,6 +564,7 @@ New version of aria2c Site Mover from Vincenzo Lavorini, e.g. updating the auth 
 __getsetWNMem() now using getMaxMemoryUsageFromCGroups() for testing purposes (Monitor)
 Corrected error message 'cmtside command was timed out' -> 'cmtsite command was timed out' in verifyCmtsiteCmd() (ATLASExperiment, TaiwanExperiment)
 Now using ATLAS_CGROUPS_BASE in isCGROUPSSite() (processes)
+Replaced globalSite with thisSite, and added a try-statement, in sig2exc() (pUtil)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
