--- a/CHANGES
+++ b/CHANGES
@@ -565,6 +565,7 @@ __getsetWNMem() now using getMaxMemoryUsageFromCGroups() for testing purposes (M
 Corrected error message 'cmtside command was timed out' -> 'cmtsite command was timed out' in verifyCmtsiteCmd() (ATLASExperiment, TaiwanExperiment)
 Now using ATLAS_CGROUPS_BASE in isCGROUPSSite() (processes)
 Replaced globalSite with thisSite, and added a try-statement, in sig2exc() (pUtil)
+Added protection for non-allowed server states in verifyJobState() (pUtil)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
