--- a/CHANGES
+++ b/CHANGES
@@ -571,6 +571,12 @@ Corrected undefined variable, t -> timeUsed, in errorToReport() (LocalSiteMover,
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+59h:
+
+Updated the xrdcp setup in getLocalROOTSetup() (ATLASSiteInformation)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 
 TODO:
