--- a/CHANGES
+++ b/CHANGES
@@ -582,6 +582,12 @@ Added -f to xrdcp command in stageOutFile(), requested by Alessandro di Girolamo
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+59i:
+
+Now making sure that exeErrorCode is properly set in getNodeStructure() (PandaServerClient)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 
 TODO:
