New version from Vincenzo

--- a/CHANGES
+++ b/CHANGES
@@ -620,6 +620,9 @@ Code merge: Code from Luke Wayne (AMS):
 New version of AMSTaiwanExperiment
 New version of AMSTaiwanSiteInformation
 
+Code from Vincenzo Lavorini:
+New version of aria2c site mover
+
 ADD NEW ERROR CODES TO THE DQ
 
 CHANGE VERSION NUMBER TO 60A
