Processing of jobReport.json added, including new error code 1223

--- a/CHANGES
+++ b/CHANGES
@@ -591,6 +591,8 @@ Now making sure that exeErrorCode is properly set in getNodeStructure() (PandaSe
 59j:
 New version of aria2c site mover from Vincenzo Lavorini
 Updates for ES merge by Wen Guan (Job, pUtil, RunJob)
+New error code ErR_BADALLOC, 1223, "TRF failed due to bad_alloc" (PilotErrors)
+Added new methods to ErrorDiagnosis; will be moved to separate module later
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
