Sending token to convertSURLtoTURL() and convertSURLtoTURLUsingHTTP()

--- a/CHANGES
+++ b/CHANGES
@@ -608,7 +608,18 @@ Added fileList argument to getPrefices and from its call in (Mover)
 Created matchCopyprefixReplica(), used by getPrefices() (Mover)
 Added prefix_dictionary argument to convertSURLtoTURL() and from its call in getTURLs() (Mover)
 Now overwriting old/newPrefix if prefix_dictionary has an entry for key value 'surl' in convertSURLtoTURL() (Mover)
-
+Created getSurlTokenDictionary() used from mover_get_data() (Mover)
+Sending tokens_dictionary to PFC4TURLs() from mover_get_data() (Mover)
+Added tokens_dictionary argument to PFC4TURLs() (Mover)
+Sending tokens_dictionary to createPFC4TURLs() from PFC4TURLs() (Mover)
+Added tokens_dictionary argument to createPFC4TURLs() (Mover)
+Sending tokens_dictionary to getTURLs() from createPFC4TURLs() (Mover)
+Added tokens_dictionary argument to getTURLs() (Mover)
+Sending the space token corresponding to the LFN to convertSURLtoTURL() from getTURLs(), requested by Johannes Elmsheuser (Mover)
+Added token argument to convertSURLtoTURL() (Mover)
+Sending token to convertSURLtoTURLUsingHTTP() from convertSURLtoTURL() (Mover)
+Added token argument to convertSURLtoTURLUsingHTTP() requested by Johannes Elmsheuser (Mover)
+ 
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
 Added new data members to Job class: eventServiceMerge, mode, hpcStatus, refreshNow (Job)
