--- a/CHANGES
+++ b/CHANGES
@@ -646,6 +646,7 @@ Now importing RunJobHpcEvent (RunJobFactory)
 New files added to distribution (ThreadPool.py, RunJobHpcEvent.py)
 Sending mode,hpcStatus,refreshNow,coreCount to pilot from updateJobInfo() (RunJobUtilities)
 Receiving mode,hpcStatus,refreshNow,coreCount in handle() (UpdateHandler)
+Added exception for S3 objectstore for merge jobs/log files, in mover_get_data() (Mover)
 
 Code merge: Code from Danila Oleynik:
 Updated ATLASExperiment
