Removedunnecessary import of Popen

--- a/CHANGES
+++ b/CHANGES
@@ -622,6 +622,7 @@ Added token argument to convertSURLtoTURLUsingHTTP() requested by Johannes Elmsh
 Support for event index, removed usage and handling of tag files (RunJobEvent)
 Always setting MAKEFLAGS for analysis jobs in getJobExecutionCommand() (ATLASExperiment)
 Always setting ROOTCORE_NCPUS in addEnvVars2Cmd() (ATLASExperiment)
+Removed unnecessary import of Popen from RunJobEvent
  
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
