--- a/CHANGES
+++ b/CHANGES
@@ -597,6 +597,12 @@ Added exception for runargs in removePyModules() (pUtil)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+59k:
+
+Ignoring failed stage-in of log files from objectstores in mover_get_data(). Update from Wen (Mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 60a:
 
 Removed the old outdated sendTrace() and renamed sendTraceToRucio() to sendTrace() (SiteMover)
