--- a/CHANGES
+++ b/CHANGES
@@ -631,7 +631,8 @@ Always setting ROOTCORE_NCPUS in addEnvVars2Cmd() (ATLASExperiment)
 Removed unnecessary import of Popen from RunJobEvent
 Created getPlainCopyPrefices() used by shouldPFC4TURLsBeCreated() (Mover)
 Added exception for dummy in shouldPFC4TURLsBeCreated() (Mover)
- 
+getMaxMemoryUsageFromCGroups() now uses ATLAS_CGROUPS_BASE if available (to support older cgroups installations), otherwise defaults to /var/cgroups/memory (processes)
+
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
 Added new data members to Job class: eventServiceMerge, mode, hpcStatus, refreshNow (Job)
