--- a/CHANGES
+++ b/CHANGES
@@ -640,6 +640,13 @@ Added sourceSite argument to mover_get_data(), sitemover_get_data() (Mover)
 Sending sourceSite to sitemover_get_data() from mover_get_data() (Mover)
 Sending sourceSite to get_data() from sitemover_get_data() (Mover)
 Sending sourceSite to sitemover.findGlobalFilePath() from mover_get_data() (Mover)
+Receiving sourceSite in get_data() (FAXSiteMover)
+Sending sourceSite to findGlobalFilePath() from get_data() (FAXSiteMover)
+Sending sitename (as computingSite) to findGlobalFilePath() from mover_get_data() (Mover)
+Getting computingSite (from sitename) in get_data() (FAXSiteMover)
+Sending sitename (as computingSite) to findGlobalFilePath() from mover_get_data() (Mover)
+Added computingSite argument to findGlobalFilePath() (FAXSiteMover)
+Sending computingSite to findGlobalFilePath() from get_data() (FAXSiteMover)
 
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
