added missing computeSite, sourceSite

--- a/CHANGES
+++ b/CHANGES
@@ -649,7 +649,18 @@ Added computingSite argument to findGlobalFilePath() (FAXSiteMover)
 Sending computingSite to findGlobalFilePath() from get_data() (FAXSiteMover)
 Created getFAXRedirectors(), used by getGlobalFilePaths() (FAXSiteMover)
 Sending computingSite, sourceSite to getGlobalFilePaths() from findGlobalFilePath() (FAXSiteMover)
-Added computingSite, sourceSite arguments to getGlobalFilePaths() (FAXSiteMover)
+Added computingSite, sourceSite arguments to getGlobalFilePaths() (FAXSiteMover, SiteMover)
+Added computingSite, sourceSite arguments to convertSURLtoTURLUsingDataset() (Mover)
+Added computingSite, sourceSite arguments to convertSURLtoTURL() (Mover)
+Added computingSite, sourceSite arguments to convertSURLtoTURL() call in getTURLs() (Mover)
+Added computingSite, sourceSite arguments to getTURLs() (Mover)
+Added computingSite, sourceSite arguments to getTURLs() call in createPFC4TURLs() (Mover)
+Added computingSite, sourceSite arguments to createPFC4TURLs() (Mover)
+Added computingSite, sourceSite arguments to createPFC4TURLs() call in PFC4TURLs() (Mover)
+Added computingSite, sourceSite arguments to PFC4TURLs() (Mover)
+Added sitename, sourceSite arguments to PFC4TURLs() call in mover_get_data() (Mover)
+Added computingSite, sourceSite arguments to getGlobalFilePaths() call in convertSURLtoTURLUsingDataset() (Mover)
+Added computingSite, sourceSite arguments to convertSURLtoTURLUsingDataset() call in convertSURLtoTURL() (Mover)
 Now selecting fax redirector depending on file type (read: lib vs no lib file) using in getGlobalFilePaths() (FAXSiteMover)
 Added pwg*, pwhg*, *PROC* to removeRedundantFiles() (ATLASexperiment)
 
