Now setting number of retries to 1 for transferType faxin mover_get_data()

--- a/CHANGES
+++ b/CHANGES
@@ -664,6 +664,7 @@ Added computingSite, sourceSite arguments to convertSURLtoTURLUsingDataset() cal
 Now selecting fax redirector depending on file type (read: lib vs no lib file) using in getGlobalFilePaths() (FAXSiteMover)
 Added pwg*, pwhg*, *PROC* to removeRedundantFiles() (ATLASexperiment)
 Added switching between three access modes for davix/webdav input access. Code from Johannes Elmsheuser (Mover)
+Now setting number of retries to 1 for transferType fax in mover_get_data() (Mover)
 
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
