Avoiding fax fallback for transferType fax in mover_get_data()

--- a/CHANGES
+++ b/CHANGES
@@ -665,6 +665,7 @@ Now selecting fax redirector depending on file type (read: lib vs no lib file) u
 Added pwg*, pwhg*, *PROC* to removeRedundantFiles() (ATLASexperiment)
 Added switching between three access modes for davix/webdav input access. Code from Johannes Elmsheuser (Mover)
 Now setting number of retries to 1 for transferType fax in mover_get_data() (Mover)
+Avoiding fax fallback for transferType fax in mover_get_data() (Mover)
 
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
