--- a/CHANGES
+++ b/CHANGES
@@ -666,6 +666,7 @@ Added pwg*, pwhg*, *PROC* to removeRedundantFiles() (ATLASexperiment)
 Added switching between three access modes for davix/webdav input access. Code from Johannes Elmsheuser (Mover)
 Now setting number of retries to 1 for transferType fax in mover_get_data() (Mover)
 Avoiding fax fallback for transferType fax in mover_get_data() (Mover)
+Added option -np (no progress bar) to xrdcp command in stageInFile() and stageOutFile() (xrdcpSiteMover)
 
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
