--- a/CHANGES
+++ b/CHANGES
@@ -691,6 +691,7 @@ New files added to distribution (ThreadPool.py, RunJobHpcEvent.py)
 Sending mode,hpcStatus,refreshNow,coreCount to pilot from updateJobInfo() (RunJobUtilities)
 Receiving mode,hpcStatus,refreshNow,coreCount in handle() (UpdateHandler)
 Added exception for S3 objectstore for merge jobs/log files, in mover_get_data() (Mover)
+Bug fix in TimerCommand, including correction of variable with wrong name - previously time-outs did not fully work (TimerCOmmand)
 
 Code merge: Code from Danila Oleynik:
 Updated ATLASExperiment
