--- a/CHANGES
+++ b/CHANGES
@@ -665,7 +665,7 @@ Now selecting fax redirector depending on file type (read: lib vs no lib file) u
 Added pwg*, pwhg*, *PROC* to removeRedundantFiles() (ATLASexperiment)
 Added switching between three access modes for davix/webdav input access. Code from Johannes Elmsheuser (Mover)
 Avoiding fax fallback for transferType fax in mover_get_data() (Mover)
-Added option -np (no progress bar) to xrdcp command in stageInFile() and stageOutFile() (xrdcpSiteMover)
+Added option -np (no progress bar) to xrdcp command in stageInFile() and stageOutFile() (xrdcpSiteMover, FAXSiteMover)
 Created useEventIndex(), setUseEventIndex() (RunJobEvent)
 Now supporting both event index and TAG file creation (RunJobEvent)
 
