--- a/CHANGES
+++ b/CHANGES
@@ -664,7 +664,7 @@ Added computingSite, sourceSite arguments to convertSURLtoTURLUsingDataset() cal
 Now selecting fax redirector depending on file type (read: lib vs no lib file) using in getGlobalFilePaths() (FAXSiteMover)
 Added pwg*, pwhg*, *PROC* to removeRedundantFiles() (ATLASexperiment)
 Added switching between three access modes for davix/webdav input access. Code from Johannes Elmsheuser (Mover)
-Avoiding fax fallback for transferType fax in mover_get_data() (Mover)
+Avoiding fax fallback for transferType and copyCommand fax in mover_get_data() (Mover)
 Added option -np (no progress bar) to xrdcp command in stageInFile() and stageOutFile() (xrdcpSiteMover, FAXSiteMover)
 Created useEventIndex(), setUseEventIndex() (RunJobEvent)
 Now supporting both event index and TAG file creation (RunJobEvent)
