Added additional support for copyprefix lists

--- a/CHANGES
+++ b/CHANGES
@@ -669,6 +669,7 @@ Added option -np (no progress bar) to xrdcp command in stageInFile() and stageOu
 Created useEventIndex(), setUseEventIndex() (RunJobEvent)
 Now supporting both event index and TAG file creation (RunJobEvent)
 Added exception for exit code 66 (TRF_EXEC_VALIDATION_FAIL) in getTrfExitInfo() (RunJobEvent)
+Added support for copyprefix lists in getPrefices() (Mover)
 
 Code merge: Code from Wen Guan:
 Added Hpc identifier in getSubprocessName() (Experiment)
