--- a/CHANGES
+++ b/CHANGES
@@ -713,6 +713,13 @@ ADD NEW ERROR CODES
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+60b:
+
+Taking a 5s nap before copying and opening the jobReport.json file to make sure it is finished, in getTrfExitInfo() (RunJob)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
 TODO:
 
 Prior to file registration (i.e. for US sites that still uses the pilot for file registrations), the pilot sets the LFC_HOST env variable; no longer needed for file 
