--- a/CHANGES
+++ b/CHANGES
@@ -116,6 +116,7 @@ New version of AMSTaiwanSiteInformation
 Taking a 5s nap before copying and opening the jobReport.json file to make sure it is finished, in getTrfExitInfo(). Problem seen with some jobs, e.g. 2397783893
 where the jobReport.json file was cut off, indicating that it was not finished writing to (RunJob)
 Added radical and HPC to directories to be copied to sandbox, in __ship_queue_data() (glexec_utils)
+Fixed curl handling in getFAXRedirectors(). Previously 'None' was not handled correctly (FAXSiteMover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
