Added some protections around file open - Vincenzo

--- a/CHANGES
+++ b/CHANGES
@@ -141,6 +141,7 @@ Update info from Wen:
 
 Update info from Vincenzo Lavorini:
 - Some error handling added to aria2c site mover
+- Added some protections around file open (aria2cSiteMover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
