Added some debugging info

--- a/CHANGES
+++ b/CHANGES
@@ -124,6 +124,7 @@ Sending jobId to getFAXRedirectors() from getGlobalFilePaths() (FAXSiteMover)
 Added jobId argument to getFAXRedirectors() (FAXSiteMover)
 Added new module that will contain functions related to file handling (FileHandling)
 getStdoutFilename() now using function from FileHandling to find last updated log file to be used in debug mode (pUtil)
+Added debug info to createLogFile() (JobLog)
 
 Update info from Edward Karavakis:
 - Added a retry mechanism with a sleep and if glexec fails, don't break the pilot
