--- a/CHANGES
+++ b/CHANGES
@@ -125,6 +125,7 @@ Added jobId argument to getFAXRedirectors() (FAXSiteMover)
 Added new module that will contain functions related to file handling (FileHandling)
 getStdoutFilename() now using function from FileHandling to find last updated log file to be used in debug mode (pUtil)
 Added debug info to createLogFile() (JobLog)
+Now setting pilotErrorDiag if there is no path to the object store in getDDMStorage() (Mover)
 
 Update info from Edward Karavakis:
 - Added a retry mechanism with a sleep and if glexec fails, don't break the pilot
